--- a/src/GUI/fxml/FileHashPage.fxml
+++ b/src/GUI/fxml/FileHashPage.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Text?>
 
 <?import javafx.scene.image.Image?>
-<AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="GUI.FileHashPageController">
+<AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@../css/General.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="GUI.Controllers.FileHashPageController">
    <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
       <Image url="/menu1.png"/>
    </ImageView>
@@ -60,7 +60,7 @@
             </font>
          </Text>
          <TextArea fx:id="hashSumText" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-                   minWidth="-Infinity" prefHeight="60.0" prefWidth="572.0" stylesheets="@TextArea.css" wrapText="true">
+                   minWidth="-Infinity" prefHeight="60.0" prefWidth="572.0" stylesheets="@../css/TextArea.css" wrapText="true">
             <font>
                <Font name="Tahoma" size="12.0"/>
             </font>
