--- a/src/GUI/fxml/HashSumCheckerPage.fxml
+++ b/src/GUI/fxml/HashSumCheckerPage.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Text?>
 
 <?import javafx.scene.image.Image?>
-<AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="GUI.HashSumCheckerPageController">
+<AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@../css/General.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="GUI.Controllers.HashSumCheckerPageController">
    <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
       <Image url="/menu1.png"/>
    </ImageView>
@@ -55,7 +55,7 @@
             </font>
          </Text>
          <TextArea fx:id="hash2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-                   prefHeight="60.0" prefWidth="572.0" stylesheets="@TextArea.css">
+                   prefHeight="60.0" prefWidth="572.0" stylesheets="@../css/TextArea.css">
             <font>
                <Font name="Tahoma" size="12.0"/>
             </font>
