--- a/src/GUI/fxml/SettingsPage.fxml
+++ b/src/GUI/fxml/SettingsPage.fxml
@@ -5,9 +5,9 @@
 
 
 <?import javafx.scene.image.Image?>
-<AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css"
+<AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@../css/General.css"
             xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-            fx:controller="GUI.SettingsPageController">
+            fx:controller="GUI.Controllers.SettingsPageController">
     <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0"
                onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed"
                onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
