--- a/src/GUI/fxml/TextEncryptionPage.fxml
+++ b/src/GUI/fxml/TextEncryptionPage.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Text?>
 
 <?import javafx.scene.image.Image?>
-<AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="GUI.TextEncryptionPageController">
+<AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@../css/General.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="GUI.Controllers.TextEncryptionPageController">
    <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonPressed" pickOnBounds="true" preserveRatio="true">
       <Image url="/menu1.png"/>
    </ImageView>
@@ -28,7 +28,7 @@
          </Text>
 
          <TextArea fx:id="inputText" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="100.0" prefWidth="572.0"
-                   stylesheets="@TextArea.css" wrapText="true"/>
+                   stylesheets="@../css/TextArea.css" wrapText="true"/>
       </VBox>
          <HBox alignment="CENTER" prefHeight="26.0" prefWidth="600.0" spacing="272.0">
             <Button fx:id="encrypt" alignment="CENTER" mnemonicParsing="false" onAction="#encrypt" prefHeight="23.0" prefWidth="220.0" text="Encrypt">
@@ -49,7 +49,7 @@
             </font>
          </Text>
          <TextArea fx:id="outputText" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="100.0" prefWidth="572.0"
-                   stylesheets="@TextArea.css" wrapText="true">
+                   stylesheets="@../css/TextArea.css" wrapText="true">
             <font>
                <Font name="Tahoma" size="12.0"/>
             </font>
