Changed text highlight color

--- a/src/GUI/css/TextArea.css
+++ b/src/GUI/css/TextArea.css
@@ -2,6 +2,6 @@
     -fx-background: #009900;
     -fx-text-fill: white;
     -fx-control-inner-background: #1a1a1a;
-    -fx-highlight-fill: red;
+    -fx-highlight-fill: #009900;
 
 }
