--- a/src/GUI/fxml/SideMenu.fxml
+++ b/src/GUI/fxml/SideMenu.fxml
@@ -22,7 +22,7 @@
          <Font name="Tahoma Bold" size="12.0" />
       </font>
    </Button>
-   <Button layoutX="35.0" layoutY="73.0" mnemonicParsing="false" onAction="#hashSumCheckerButtonAction" prefHeight="25.0" prefWidth="150.0" text="File checksum" textFill="WHITE">
+   <Button layoutX="35.0" layoutY="73.0" mnemonicParsing="false" onAction="#hashSumCheckerButtonAction" prefHeight="25.0" prefWidth="150.0" text="Verify hash" textFill="WHITE">
       <font>
          <Font name="Tahoma Bold" size="12.0" />
       </font>
